# app/Http/Controllers/WishlistController.php
@@ -9,20 +9,20 @@ use Tymon\JWTAuth\Facades\JWTAuth;
 use Illuminate\Support\Facades\Cache;
 use Illuminate\Support\Facades\DB;
 use App\Models\Book;
-use App\Models\Cart;
+use App\Models\Wishlist;
 use App\Exceptions\BookStoreAppException;
 
-class CartController extends Controller
+class WishlistController extends Controller
 {
     /**
-     * This Function will take book id as input and it will ad that book to cart
+     * This Function will take book id as input and it will ad that book to wishlist
      * as per user's requirement
      */
-        /**
+    /**
      * @OA\Post(
-     *   path="/api/auth/addtocart",
-     *   summary="Add the book to Cart",
-     *   description=" Add to cart ",
+     *   path="/api/auth/addtowishlist",
+     *   summary="Add the book to wishlist",
+     *   description=" Add to wishlist ",
      *   @OA\RequestBody(
      *         @OA\JsonContent(),
      *         @OA\MediaType(
@@ -34,14 +34,14 @@ class CartController extends Controller
      *            ),
      *        ),
      *    ),
-     *   @OA\Response(response=201, description="Book added to Cart Sucessfully"),
+     *   @OA\Response(response=201, description="Book added to wishlist Sucessfully"),
      *   @OA\Response(response=404, description="Invalid authorization token"),
      *   security = {
      * {
      * "Bearer" : {}}}
      * )
      */
-    public function addBookToCartByBookId(Request $request)
+    public function addBookToWishlistByBookId(Request $request)
     {
         $validator = Validator::make($request->all(), [
             'book_id' => 'required|integer|min:1',
@@ -53,39 +53,43 @@ class CartController extends Controller
         }
         try {
             $currentUser = JWTAuth::parseToken()->authenticate();
-            $cart = new Cart();
-            $userId = $cart->adminOrUserVerification($currentUser->id);
+            $wishlist = new Wishlist();
+            $userId = $wishlist->adminOrUserVerification($currentUser->id);
             if (count($userId) == 0) {
                 return response()->json(['message' => 'You are not an User'], 404);
             }
             if ($currentUser) {
                 $book_id = $request->input('book_id');
-                $book_existance = $cart->bookExistOrNot($book_id);
+                $book_existance = Book::select('quantity')->where([
+                    ['id', '=', $book_id]
+                ])->get();
 
                 if (!$book_existance) {
-                    return response()->json(['message' => 'Book not Found'], 404);
+                    return response()->json(['message' => 'Book not Found In The Bookstore'], 404);
                 }
                 $book = Book::find($book_id);
                 if ($book->quantity == 0) {
-                    return response()->json(['message' => 'OUT OF STOCK'], 404);
+                    return response()->json(['message' => 'OUT OF STOCK From The BookStore'], 404);
                 }
-                $book_cart = Cart::where([
+                $book_wishlist = Wishlist::where([
                     ['book_id', '=', $request->input('book_id')],
                     ['user_id', '=', $currentUser->id]
                 ])->first();
-                if ($book_cart) { 
-                    return response()->json(['message' => 'Book already added to Cart'], 404);
-                }
-                $cart = new Cart;
-                $cart->book_id = $request->get('book_id');
 
-                if ($currentUser->carts()->save($cart)) {
-                    return response()->json(['message' => 'Book added to Cart Sucessfully'], 201);
+                if ($book_wishlist) {
+                    return response()->json(['message' => 'Book already added to Wishlist'], 404);
                 }
-                $value = Cache::remember('carts', 3600, function () {
-                    return DB::table('carts')->get();
+
+                $wishlist = new Wishlist();
+                $wishlist->book_id = $request->get('book_id');
+
+                if ($currentUser->wishlists()->save($wishlist)) {
+                    return response()->json(['message' => 'Book added to wishlist Sucessfully'], 201);
+                }
+                $value = Cache::remember('wishlists', 3600, function () {
+                    return DB::table('wishlists')->get();
                 });
-                return response()->json(['message' => 'Book cannot be added to Cart'], 405);
+                return response()->json(['message' => 'Book cannot be added to wishlist'], 405);
             } else {
                 Log::error('Invalid User');
                 throw new BookStoreAppException("Invalid authorization token", 404);
@@ -96,14 +100,14 @@ class CartController extends Controller
     }
 
     /**
-     * This Function will take cart Id as input and will perform the delete operation
-     * for the perticular cart which the user want to delete from cart
+     * This Function will take wishlist Id as input and will perform the delete operation
+     * for the perticular wishlist which the user want to delete from wishlist
      */
     /**
      * @OA\Post(
-     *   path="/api/auth/deletecart",
-     *   summary="Delete the book from cart",
-     *   description=" Delete cart ",
+     *   path="/api/auth/deletewishlist",
+     *   summary="Delete the book from wishlist",
+     *   description=" Delete wishlist ",
      *   @OA\RequestBody(
      *         @OA\JsonContent(),
      *         @OA\MediaType(
@@ -115,14 +119,14 @@ class CartController extends Controller
      *            ),
      *        ),
      *    ),
-     *   @OA\Response(response=201, description="Book deleted Sucessfully from cart"),
+     *   @OA\Response(response=201, description="Book deleted Sucessfully from wishlist"),
      *   @OA\Response(response=404, description="Invalid authorization token"),
      *   security = {
      * {
      * "Bearer" : {}}}
      * )
      */
-    public function deleteBookByCartId(Request $request)
+    public function deleteBookByWishlistId(Request $request)
     {
         $validator = Validator::make($request->all(), [
             'id' => 'required',
@@ -133,8 +137,8 @@ class CartController extends Controller
         try {
             $id = $request->input('id');
             $currentUser = JWTAuth::parseToken()->authenticate();
-            $cart = new Cart();
-            $userId = $cart->adminOrUserVerification($currentUser->id);
+            $wishlist = new Wishlist();
+            $userId = $wishlist->adminOrUserVerification($currentUser->id);
             if (count($userId) == 0) {
                 return response()->json(['message' => 'You are not an User'], 404);
             }
@@ -142,18 +146,18 @@ class CartController extends Controller
                 Log::error('Invalid User');
                 throw new BookStoreAppException("Invalid authorization token", 404);
             }
-            $book = $currentUser->carts()->find($id);
+            $book = $currentUser->wishlists()->find($id);
             if (!$book) {
                 Log::error('Book Not Found', ['id' => $request->id]);
-                return response()->json(['message' => 'Book not Found in cart'], 404);
+                return response()->json(['message' => 'Book not Found in wishlist'], 404);
             }
 
             if ($book->delete()) {
                 Log::info('book deleted', ['user_id' => $currentUser, 'book_id' => $request->id]);
-                $value = Cache::remember('carts', 3600, function () {
-                    return DB::table('carts')->get();
+                $value = Cache::remember('wishlists', 3600, function () {
+                    return DB::table('wishlists')->get();
                 });
-                return response()->json(['message' => 'Book deleted Sucessfully from cart'], 201);
+                return response()->json(['message' => 'Book deleted Sucessfully from wishlist'], 201);
             }
         } catch (BookStoreAppException $e) {
             return response()->json(['message' => $e->message(), 'status' => $e->statusCode()]);
@@ -162,13 +166,13 @@ class CartController extends Controller
     
     /**
      * This method will execute and return for the current user which books are added
-     * in the cart and return all data
+     * in the wishlist and return all data
      */
-        /**
+    /**
      * @OA\Get(
-     *   path="/api/auth/getcart",
-     *   summary="Get All Books Present in Cart",
-     *   description=" Get All Books Present in Cart ",
+     *   path="/api/auth/getwishlist",
+     *   summary="Get All Books Present in wishlist",
+     *   description=" Get All Books Present in wishlist ",
      *   @OA\RequestBody(
      *         
      *    ),
@@ -178,29 +182,29 @@ class CartController extends Controller
      * "Bearer" : {}}}
      * )
      */
-    public function getAllBooksByUserId()
+    public function getAllBooksInWishlist()
     {
         try {
             $currentUser = JWTAuth::parseToken()->authenticate();
-            $cart = new Cart();
-            $userId = $cart->adminOrUserVerification($currentUser->id);
+            $wishlist = new Wishlist();
+            $userId = $wishlist->adminOrUserVerification($currentUser->id);
             if (count($userId) == 0) {
                 return response()->json(['message' => 'You are not an User'], 404);
             }
             if ($currentUser) {
-                $books = Cart::leftJoin('books', 'carts.book_id', '=', 'books.id')
-                    ->select('books.id', 'books.name', 'books.author', 'books.description', 'books.Price', 'carts.book_quantity')
-                    ->where('carts.user_id', '=', $currentUser->id)
+                $books = Wishlist::leftJoin('books', 'wishlists.book_id', '=', 'books.id')
+                    ->select('books.id', 'books.name', 'books.author', 'books.description', 'books.Price', 'wishlists.book_quantity')
+                    ->where('wishlists.user_id', '=', $currentUser->id)
                     ->get();
 
                 if ($books == '[]') {
                     Log::error('Book Not Found');
                     return response()->json(['message' => 'Books not found'], 404);
                 }
-                Log::info('All book Presnet in cart are fetched');
+                Log::info('All book Presnet in wishlist are fetched');
                 return response()->json([
-                    'message' => 'Books Present in Cart :',
-                    'Cart' => $books,
+                    'message' => 'Books Present in wishlist :',
+                    'wishlist' => $books,
 
                 ], 201);
             } else {
@@ -213,14 +217,14 @@ class CartController extends Controller
     }
 
     /**
-     * This function will take input as cart id and quantity from user and update
-     * the quantity for the respective cart id and user
+     * This function will take input as wishlist id and quantity from user and update
+     * the quantity for the respective wishlist id and user
      */
     /**
      * @OA\Post(
-     *   path="/api/auth/updatequantity",
-     *   summary="Add Quantity to Existing Book in cart",
-     *   description=" Add Book Quantity  in cart",
+     *   path="/api/auth/updatewishlist",
+     *   summary="Add Quantity to Existing Book in wishlist",
+     *   description=" Add Book Quantity  in wishlist",
      *   @OA\RequestBody(
      *         @OA\JsonContent(),
      *         @OA\MediaType(
@@ -240,7 +244,7 @@ class CartController extends Controller
      * "Bearer" : {}}}
      * )
      */
-    public function updateBookQuantityInCart(Request $request)
+    public function updateBookQuantityInWishlist(Request $request)
     {
         $validator = Validator::make($request->all(), [
             'id' => 'required',
@@ -252,8 +256,8 @@ class CartController extends Controller
 
         try {
             $currentUser = JWTAuth::parseToken()->authenticate();
-            $cart = new Cart();
-            $userId = $cart->adminOrUserVerification($currentUser->id);
+            $wishlist = new Wishlist();
+            $userId = $wishlist->adminOrUserVerification($currentUser->id);
             if (count($userId) == 0) {
                 return response()->json(['message' => 'You are not an User'], 404);
             }
@@ -261,16 +265,16 @@ class CartController extends Controller
                 Log::error('Invalid User');
                 throw new BookStoreAppException("Invalid authorization token", 404);
             }
-            $cart = Cart::find($request->id);
+            $wishlist = Wishlist::find($request->id);
 
-            if (!$cart) {
+            if (!$wishlist) {
                 return response()->json([
                     'message' => 'Item Not found with this id'
                 ], 404);
             }
-            $cart->book_quantity += $request->book_quantity;
-            $cart->save();
-            Log::info('Book Quantity updated Successfully to the bookstore cart');
+            $wishlist->book_quantity += $request->book_quantity;
+            $wishlist->save();
+            Log::info('Book Quantity updated Successfully to the bookstore wishlist');
             return response()->json([
                 'message' => 'Book Quantity updated Successfully'
             ], 201);
@@ -280,14 +284,10 @@ class CartController extends Controller
     }
 
     /**
-     * This function will take input as cart id and quantity from user and update
-     * the quantity for the respective cart id and user
-     */
-    /**
      * @OA\Post(
-     *   path="/api/auth/decreasequantity",
-     *   summary="Decrease Quantity to Existing Book in cart",
-     *   description=" Decrease Book Quantity  in cart",
+     *   path="/api/auth/decreasewishlist",
+     *   summary="Decrease Quantity to Existing Book in wishlist",
+     *   description=" decrease Book Quantity  in wishlist",
      *   @OA\RequestBody(
      *         @OA\JsonContent(),
      *         @OA\MediaType(
@@ -307,7 +307,7 @@ class CartController extends Controller
      * "Bearer" : {}}}
      * )
      */
-    public function decreaseBookQuantityInCart(Request $request)
+    public function decreaseBookQuantityInWishlist(Request $request)
     {
         $validator = Validator::make($request->all(), [
             'id' => 'required',
@@ -319,8 +319,8 @@ class CartController extends Controller
 
         try {
             $currentUser = JWTAuth::parseToken()->authenticate();
-            $cart = new Cart();
-            $userId = $cart->adminOrUserVerification($currentUser->id);
+            $wishlist = new Wishlist();
+            $userId = $wishlist->adminOrUserVerification($currentUser->id);
             if (count($userId) == 0) {
                 return response()->json(['message' => 'You are not an User'], 404);
             }
@@ -328,16 +328,16 @@ class CartController extends Controller
                 Log::error('Invalid User');
                 throw new BookStoreAppException("Invalid authorization token", 404);
             }
-            $cart = Cart::find($request->id);
+            $wishlist = Wishlist::find($request->id);
 
-            if (!$cart) {
+            if (!$wishlist) {
                 return response()->json([
                     'message' => 'Item Not found with this id'
                 ], 404);
             }
-            $cart->book_quantity -= $request->book_quantity;
-            $cart->save();
-            Log::info('Book Quantity updated Successfully to the bookstore cart');
+            $wishlist->book_quantity -= $request->book_quantity;
+            $wishlist->save();
+            Log::info('Book Quantity updated Successfully to the bookstore wishlist');
             return response()->json([
                 'message' => 'Book Quantity updated Successfully'
             ], 201);
